src/test/compile-fail/attr-bad-crate-attr.rc
// xfail-stage0
// error-pattern: expecting mod

#[attr = "val"];
#[attr = "val"] // Unterminated
